# systems-probe

./: .gitignore  CMakeLists.txt  README.md  common.hpp
allocation/: CMakeLists.txt  adaptive_allocator_queue.cpp  adaptive_allocator_queue.hpp  common.hpp  conversion_tests.cpp  memory_usage_test.cpp  message_queue.hpp  message_queue_tests.cpp  message_queue_writer.cpp  parcel_buffer.cpp  sehe_stackoverflow.cpp  shm_transaction.hpp  test.cpp  transaction_tests.cpp  tx_alignment_test.cpp
bipc/: CMakeLists.txt  containers_of_containers.cpp  multi-index.cpp  named_mem_block.cpp  offset_ptr_basics.cpp  shm_map.cpp  shm_vector.cpp  unnamed_mem_block.cpp  unordered_containers.cpp
ipc/: CMakeLists.txt  growing_file.cpp  increment_counter.cpp  increment_shared_semaphore.cpp  mapped_sizing.cpp  shm_create.cpp  shm_delete.cpp  shm_simple_reader.cpp  shm_simple_writer.cpp
processes/: CMakeLists.txt  basic_pids.cpp  child_changes_globals.cpp  notes.md
